dark mode bugs

--- a/styles/global.css
+++ b/styles/global.css
@@ -115,7 +115,6 @@ body {
 }
 
 .loader-animation path {
-  stroke: #1e1e1e;
   stroke-width: 2;
   fill: none;
   stroke-linecap: round;
